--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4153534752"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?crc=38397880" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?crc=4242504374" id="pagesheet"/>
     <!--/*
 
 */
@@ -484,16 +484,24 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p>^</p>
      </div>
     </div>
+    <div class="clearfix mse_pre_init" id="u41510"><!-- group -->
+     <div class="clearfix grpelem" id="u41507-4"><!-- content -->
+      <p>S</p>
+     </div>
+     <div class="clearfix grpelem" id="u41504-4" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=-1,M12=0,M21=0,M22=-1,SizingMethod='auto expand')" data-mu-ie-matrix-dx="0" data-mu-ie-matrix-dy="0"><!-- content -->
+      <p>^</p>
+     </div>
+    </div>
    </div>
    <div class="clearfix grpelem" id="pu15288"><!-- column -->
     <div class="colelem" id="u15288" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-121" data-mu-ie-matrix-dy="121"><!-- simple frame --></div>
-    <div class="clearfix colelem" id="pu42918"><!-- group -->
+    <div class="clearfix colelem" id="pu15293"><!-- group -->
+     <div class="grpelem" id="u15293"><!-- simple frame --></div>
+     <div class="grpelem" id="u15296" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-3830" data-mu-ie-matrix-dy="3830"><!-- simple frame --></div>
      <div class="transition shadow grpelem" id="u42918" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9563,M12=0.2924,M21=-0.2924,M22=0.9563,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-65" data-mu-ie-matrix-dy="-79"><!-- simple frame --></div>
      <div class="transition shadow grpelem" id="u42919" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="43" data-mu-ie-matrix-dy="-43"><!-- simple frame --></div>
      <div class="transition shadow grpelem" id="u42920" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9563,M12=0.2924,M21=-0.2924,M22=0.9563,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-65" data-mu-ie-matrix-dy="-79"><!-- simple frame --></div>
      <div class="transition shadow grpelem" id="u42921" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="43" data-mu-ie-matrix-dy="-43"><!-- simple frame --></div>
-     <div class="grpelem" id="u15293"><!-- simple frame --></div>
-     <div class="grpelem" id="u15296" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=-1,M21=1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-3830" data-mu-ie-matrix-dy="3830"><!-- simple frame --></div>
      <a class="nonblock nontext clip_frame grpelem" id="u27906" href="san2.html"><!-- image --><img class="block" id="u27906_img" src="images/san.gif?crc=3962150324" alt="" width="392" height="392"/></a>
      <div class="pointer_cursor clearfix grpelem" id="u17566"><!-- group -->
       <a class="block" target="_blank" href="javi2.html"><!-- Block link tag --></a>
@@ -501,9 +509,9 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <a class="nonblock nontext clearfix grpelem" id="u15818-4" href="javi2.html" target="_blank"><!-- content --><p>Javiera</p></a>
      </div>
      <a class="nonblock nontext clearfix grpelem" id="u27915-4" href="san2.html" target="_blank"><!-- content --><p>Santiago</p></a>
-     <a class="nonblock nontext clip_frame grpelem" id="u17731" href="felipe.html" target="_blank"><!-- image --><img class="block" id="u17731_img" src="images/7643586928_a749150a9a_o%20(1)356x236.jpg?crc=3896173270" alt="" width="356" height="236"/></a>
+     <a class="nonblock nontext clip_frame grpelem" id="u17731" href="f2.html" target="popup" onclick="window.open('f2.html',name,'width=250,height=250')"><!-- image --><img class="block" id="u17731_img" src="images/7643586928_a749150a9a_o%20(1)356x236.jpg?crc=3896173270" alt="" width="356" height="236"/></a>
      <div class="pointer_cursor clearfix grpelem" id="u17733"><!-- group -->
-      <a class="block" target="_blank" href="felipe.html"><!-- Block link tag --></a>
+      <a class="block" target="_blank" href="f2.html" target="popup" onclick="window.open('f2.html',name,'width=250,height=250')"><!-- Block link tag --></a>
       <div class="clearfix grpelem" id="pu17681"><!-- column -->
        <a class="nonblock nontext shadow clip_frame colelem" id="u17681" href="felipe.html" target="_blank"><!-- image --><img class="block" id="u17681_img" src="images/0dfe58c4-9a34-4a8f-95f9-38048aaa179b.jpg?crc=3995921424" alt="" width="133" height="105"/></a>
        <a class="nonblock nontext shadow clip_frame colelem" id="u17689" href="felipe.html" target="_blank"><!-- image --><img class="block" id="u17689_img" src="images/1cec63cf-a6aa-457f-b0ee-cf81d262cca8.jpg?crc=526436760" alt="" width="121" height="122"/></a>
@@ -524,11 +532,13 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <a class="nonblock nontext clearfix grpelem" id="u1661-8" href="intro.html"><!-- content --><p>The South is now understood as a place to be dreamt about but also as a space that is struggling because of its past and its present.</p><p>There’s a force pulling students from the Global South to come to the North as a prescribed path to success.</p><p>I’ve set out to listen to these unique voices. Their ideas of what they thought they would find in the north, against what they’ve found; What they left behind, and what they’re longing for. They might think they have found something, or they could have got lost in their journey.</p></a>
      <div class="pointer_cursor clearfix grpelem" id="u2146-6"><!-- content -->
       <a class="block" href="juan-pablo.html"><!-- Block link tag --></a>
-      <p><span><a class="nonblock" href="juan-pablo.html">Juan Pablo</a></span></p>
+      <p><span><a class="nonblock" href="juan-pablo.html"><span id="u2146">Juan Pablo</span></a></span></p>
      </div>
      <div class="pointer_cursor clearfix grpelem" id="u34030-6"><!-- content -->
-      <a class="block" href="michelle.html"><!-- Block link tag --></a>
-      <p><span><a class="nonblock" href="juan-pablo.html">MICHELLE</a></span></p>
+      <a class="block" href="#Michelle.html" onclick="window.open('Mish-1.html','width=250','height=250');
+    window.open('Mish-2.html')"><!-- Block link tag --></a>
+      <p><span><a class="nonblock" href="#Michelle.html" onclick="window.open('Mish-1.html');
+    window.open('Mish-2.html');">MICHELLE</a></span></p>
      </div>
      <div class="pointer_cursor clearfix grpelem" id="u15403-6"><!-- content -->
       <a class="block" href="lorena.html"><!-- Block link tag --></a>
@@ -696,14 +706,6 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <div class="clearfix grpelem" id="u37129-4"><!-- content -->
       <p>we will be the ones remaining</p>
      </div>
-     <div class="clearfix grpelem" id="u41510"><!-- group -->
-      <div class="clearfix grpelem" id="u41507-4"><!-- content -->
-       <p>S</p>
-      </div>
-      <div class="clearfix grpelem" id="u41504-4" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=-1,M12=0,M21=0,M22=-1,SizingMethod='auto expand')" data-mu-ie-matrix-dx="0" data-mu-ie-matrix-dy="0"><!-- content -->
-       <p>^</p>
-      </div>
-     </div>
      <div class="clip_frame grpelem" id="u42313" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0.9998,M12=-0.0175,M21=0.0175,M22=0.9998,SizingMethod='auto expand')" data-mu-ie-matrix-dx="-3" data-mu-ie-matrix-dy="-5"><!-- svg -->
       <img class="svg" id="u42314" src="images/libro-colorear-07.svg?crc=3994444334" width="598" height="346" alt="" data-mu-svgfallback="images/libro%20colorear-07_poster_.png?crc=3844426094"/>
      </div>
@@ -743,6 +745,7 @@ Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
 $('#u15506-600').registerPositionScrollEffect([{"speed":[0.3,-0.3],"in":[-Infinity,4050]},{"speed":[0.3,-0.3],"in":[4050,Infinity]}]);/* scroll effect */
 $('#u41513').registerPositionScrollEffect([{"speed":[1,1],"in":[-Infinity,3268.68]},{"speed":[3,0],"in":[3268.68,Infinity]}]);/* scroll effect */
+$('#u41510').registerPositionScrollEffect([{"speed":[1,0.5],"in":[-Infinity,4421.1]},{"speed":[-0.3,1],"in":[4421.1,Infinity]}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
