--- a/andres.html
+++ b/andres.html
@@ -15,8 +15,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
   
   <title>Andres</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=4153534752"/>
-  <link rel="stylesheet" type="text/css" href="css/andres.css?crc=3994514865" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=312001045"/>
+  <link rel="stylesheet" type="text/css" href="css/andres.css?crc=378170320" id="pagesheet"/>
     <!--/*
 
 */
@@ -48,10 +48,10 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div class="clearfix colelem" id="pu40779"><!-- group -->
-    <div class="clip_frame grpelem" id="u40779"><!-- image -->
+    <div class="clip_frame ose_pre_init grpelem" id="u40779"><!-- image -->
      <img class="block" id="u40779_img" src="images/agua.gif?crc=139268849" alt="" width="54" height="54"/>
     </div>
-    <div class="clip_frame grpelem" id="u40809"><!-- image -->
+    <div class="clip_frame ose_pre_init grpelem" id="u40809"><!-- image -->
      <img class="block" id="u40809_img" src="images/agua.gif?crc=139268849" alt="" width="80" height="80"/>
     </div>
     <div class="clearfix ose_pre_init grpelem" id="u39513-6"><!-- content -->
@@ -178,7 +178,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       <p>Responsabilidad de cada uno es encontrar nuestro propio tesoro en este inmenso mar. Enfatizo en nuestro propio tesoro, porque las mentiras, teorías conspirativas o noticias falsas son tesoro de alguien.</p>
      </div>
     </div>
-    <div class="clip_frame grpelem" id="u40830"><!-- image -->
+    <div class="clip_frame ose_pre_init grpelem" id="u40830"><!-- image -->
      <img class="block" id="u40830_img" src="images/agua.gif?crc=139268849" alt="" width="38" height="38"/>
     </div>
     <div class="clip_frame grpelem" id="u40202"><!-- svg -->
@@ -242,7 +242,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
     </div>
    </div>
    <div class="clearfix colelem" id="pu40851"><!-- group -->
-    <div class="clip_frame grpelem" id="u40851"><!-- image -->
+    <div class="clip_frame ose_pre_init grpelem" id="u40851"><!-- image -->
      <img class="block" id="u40851_img" src="images/agua.gif?crc=139268849" alt="" width="52" height="52"/>
     </div>
     <div class="clearfix ose_pre_init grpelem" id="u39519-4"><!-- content -->
@@ -261,7 +261,7 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
      <img class="svg" id="u40708" src="images/flor-102-10.svg?crc=4184108686" width="13" height="12" alt="" data-mu-svgfallback="images/flor-102-10_poster_.png?crc=4032846127"/>
     </div>
    </div>
-   <div class="clip_frame colelem" id="u40900"><!-- image -->
+   <div class="clip_frame ose_pre_init colelem" id="u40900"><!-- image -->
     <img class="block" id="u40900_img" src="images/agua.gif?crc=139268849" alt="" width="80" height="80"/>
    </div>
    <div class="clearfix colelem" id="u40612-5"><!-- content -->
@@ -287,19 +287,24 @@ Muse.Utils.transformMarkupToFixBrowserProblemsPreInit();/* body */
 Muse.Utils.prepHyperlinks(true);/* body */
 Muse.Utils.makeButtonsVisibleAfterSettingMinWidth();/* body */
 Muse.Utils.fullPage('#page');/* 100% height page */
-$('#u39510-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,8],"opacity":0},{"opacity":100,"in":[8,8]},{"fade":55.95,"in":[8,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39507-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,10],"opacity":0},{"opacity":100,"in":[10,10]},{"fade":54.1,"in":[10,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39513-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,183.56],"opacity":0},{"opacity":100,"in":[183.56,183.56]},{"fade":50,"in":[183.56,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39516-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,431.01],"opacity":0},{"opacity":100,"in":[431.01,431.01]},{"fade":50,"in":[431.01,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39528-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,431.01],"opacity":0},{"opacity":100,"in":[431.01,431.01]},{"fade":50,"in":[431.01,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39531-6').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,183.56],"opacity":0},{"opacity":100,"in":[183.56,183.56]},{"fade":50,"in":[183.56,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39556').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,217.05],"opacity":0},{"opacity":100,"in":[217.05,217.05]},{"fade":50,"in":[217.05,Infinity],"opacity":0}]);/* scroll effect */
-$('#u40386').registerOpacityScrollEffect([{"fade":135.5,"in":[-Infinity,576.95],"opacity":0},{"opacity":100,"in":[576.95,576.95]},{"fade":183.35,"in":[576.95,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39504-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,715.7],"opacity":0},{"opacity":100,"in":[715.7,715.7]},{"fade":50,"in":[715.7,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39525-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,715.66],"opacity":0},{"opacity":100,"in":[715.66,715.66]},{"fade":50,"in":[715.66,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39519-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,924.31],"opacity":0},{"opacity":100,"in":[924.31,924.31]},{"fade":50,"in":[924.31,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39538').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,847.05],"opacity":0},{"opacity":100,"in":[847.05,847.05]},{"fade":50,"in":[847.05,Infinity],"opacity":0}]);/* scroll effect */
-$('#u39522-4').registerOpacityScrollEffect([{"fade":50,"in":[-Infinity,924.26],"opacity":0},{"opacity":100,"in":[924.26,924.26]},{"fade":50,"in":[924.26,Infinity],"opacity":0}]);/* scroll effect */
+$('#u39510-4').registerOpacityScrollEffect([{"in":[-Infinity,8],"opacity":0,"fade":50},{"opacity":100,"in":[8,8]},{"in":[8,Infinity],"opacity":0,"fade":55.95}]);/* scroll effect */
+$('#u39507-4').registerOpacityScrollEffect([{"in":[-Infinity,10],"opacity":0,"fade":50},{"opacity":100,"in":[10,10]},{"in":[10,Infinity],"opacity":0,"fade":54.1}]);/* scroll effect */
+$('#u40779').registerOpacityScrollEffect([{"in":[-Infinity,152.15],"opacity":0,"fade":50},{"opacity":100,"in":[152.15,152.15]},{"in":[152.15,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u40809').registerOpacityScrollEffect([{"in":[-Infinity,389.1],"opacity":0,"fade":50},{"opacity":100,"in":[389.1,389.1]},{"in":[389.1,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39513-6').registerOpacityScrollEffect([{"in":[-Infinity,183.56],"opacity":0,"fade":50},{"opacity":100,"in":[183.56,183.56]},{"in":[183.56,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39516-6').registerOpacityScrollEffect([{"in":[-Infinity,431.01],"opacity":0,"fade":50},{"opacity":100,"in":[431.01,431.01]},{"in":[431.01,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39528-6').registerOpacityScrollEffect([{"in":[-Infinity,431.01],"opacity":0,"fade":50},{"opacity":100,"in":[431.01,431.01]},{"in":[431.01,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39531-6').registerOpacityScrollEffect([{"in":[-Infinity,183.56],"opacity":0,"fade":50},{"opacity":100,"in":[183.56,183.56]},{"in":[183.56,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39556').registerOpacityScrollEffect([{"in":[-Infinity,217.05],"opacity":0,"fade":50},{"opacity":100,"in":[217.05,217.05]},{"in":[217.05,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u40386').registerOpacityScrollEffect([{"in":[-Infinity,576.95],"opacity":0,"fade":135.5},{"opacity":100,"in":[576.95,576.95]},{"in":[576.95,Infinity],"opacity":0,"fade":183.35}]);/* scroll effect */
+$('#u39504-4').registerOpacityScrollEffect([{"in":[-Infinity,715.7],"opacity":0,"fade":50},{"opacity":100,"in":[715.7,715.7]},{"in":[715.7,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u40830').registerOpacityScrollEffect([{"in":[-Infinity,690.6],"opacity":0,"fade":50},{"opacity":100,"in":[690.6,690.6]},{"in":[690.6,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39525-4').registerOpacityScrollEffect([{"in":[-Infinity,715.66],"opacity":0,"fade":50},{"opacity":100,"in":[715.66,715.66]},{"in":[715.66,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u40851').registerOpacityScrollEffect([{"in":[-Infinity,847.3],"opacity":0,"fade":50},{"opacity":100,"in":[847.3,847.3]},{"in":[847.3,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39519-4').registerOpacityScrollEffect([{"in":[-Infinity,924.31],"opacity":0,"fade":50},{"opacity":100,"in":[924.31,924.31]},{"in":[924.31,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39538').registerOpacityScrollEffect([{"in":[-Infinity,847.05],"opacity":0,"fade":50},{"opacity":100,"in":[847.05,847.05]},{"in":[847.05,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u39522-4').registerOpacityScrollEffect([{"in":[-Infinity,924.26],"opacity":0,"fade":50},{"opacity":100,"in":[924.26,924.26]},{"in":[924.26,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
+$('#u40900').registerOpacityScrollEffect([{"in":[-Infinity,1104.6],"opacity":0,"fade":50},{"opacity":100,"in":[1104.6,1104.6]},{"in":[1104.6,Infinity],"opacity":0,"fade":50}]);/* scroll effect */
 Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 }catch(b){if(b&&"function"==typeof b.notify?b.notify():Muse.Assert.fail("Error calling selector function: "+b),false)throw b;}})})};
